tests/api/reference/negative/08-output-section-in-virtual.asm
virtual.begin(0x8000)
output.section("invalid", 0x9000)
virtual.end()
